auto-test/tests/chapter_18/invalid_struct_tags/for_loop_scope.c
int main(void) {
    for (int i = 0; i < 10; i = i + 1) {
        
        
        struct s {
            int a;
        };
    }

    
    
    
    
    struct s x;
    return 0;
}